# JS-Website-builder-setup

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  README.md  RPT-modules-1.md  RPT-wiring-1.md  pyrightconfig.json
.claude-plugin/: plugin.json  (+1 more)
tests/: README.md  detector.py  pyproject.toml  run-tests.sh  smoke_test.py  test_pre_tool_use.py
tests/adapters/: README.md
tests/adapters/framer/: README.md  expected.yaml
tests/adapters/nextjs/: README.md  expected.yaml
tests/adapters/wordpress/: README.md  expected.yaml
tests/claudemd/: test_wb_claudemd.py
tests/cli/: README.md  test_wb_dispatch.py
tests/cms-adapters/: README.md
tests/cms-adapters/decap/: README.md  expected.yaml
tests/cms-adapters/none/: README.md  expected.yaml
tests/cms-adapters/payload/: README.md  expected.yaml
tests/commerce-adapters/: README.md
tests/commerce-adapters/calcom/: README.md  expected.yaml
tests/commerce-adapters/stripe/: README.md  expected.yaml
tests/fanout/: README.md  test_wb_fanout.py
tests/handoff-protocol/: README.md  test_handoff_protocol.py
tests/hooks/: README.md  test_session_start_subprojects.py  test_session_start_wiring.py
tests/imagegen/: test_wb_imagegen.py
tests/keys/: README.md  test_wb_keys.py
tests/markdown/: test_wb_markdown.py
tests/orchestration/: test_e2e_gaps.py  test_e2e_phases.py  test_e2e_surfaces.py  test_wb_orchestrate.py
tests/portability/: test_devault_and_catalogue.py
tests/post-launch/: README.md  test_post_launch.py
tests/validate-layers/: test_wb_validate_layers.py
tests/videogen/: test_wb_videogen.py
(+367 files in other folders)
